--- a/spotify-clone/src/Header.css
+++ b/spotify-clone/src/Header.css
@@ -25,3 +25,24 @@
 .header_right >h4{
     margin-left: 10px;
 }
+.header_logout{
+    padding: 10px;
+    position: absolute;
+    margin: 0px -50px;
+    background-color: #333;
+    border-radius: 5px;
+}
+.header_logout > h3{
+    margin: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    padding: 5px 0px;
+    border-bottom: 1px solid rgb(182, 178, 178);
+    transition:200ms transform ease-in;
+}
+.header_logout > h3:hover{
+    transform: scale(1.05);
+}
+.header_right_upArrow{
+    padding-top: 10px;
+}
